--- a/app/src/main/res/drawable-night/item_background.xml
+++ b/app/src/main/res/drawable-night/item_background.xml
@@ -8,11 +8,6 @@
   ~ of the License, or (at your option) any later version.
   -->
 
-<resources>
-    <color name="colorPrimary">#3a68a4</color>
-    <color name="colorPrimaryDark">#ccc</color>
-    <color name="colorAccent">#fff</color>
-
-    <color name="drawable_color">#FF000000</color>
-    <color name="text_color">#FF000000</color>
-</resources>
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+    <solid android:color="#000"/>
+</shape>
