--- a/app/src/main/res/drawable/ic_stop_black_24dp.xml
+++ b/app/src/main/res/drawable/ic_stop_black_24dp.xml
@@ -10,5 +10,5 @@
 <vector android:autoMirrored="true" android:height="24dp"
     android:viewportHeight="24.0" android:viewportWidth="24.0"
     android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M6,6h12v12H6z"/>
+    <path android:fillColor="@color/drawable_color" android:pathData="M6,6h12v12H6z"/>
 </vector>
