--- a/app/src/main/res/layout/mark_activity.xml
+++ b/app/src/main/res/layout/mark_activity.xml
@@ -119,7 +119,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#ddd"
+        android:background="@color/colorAccent"
         app:menu="@menu/navigation_mark"
         android:padding="4dp"/>
 
