--- a/app/src/main/res/layout/timetable_activity.xml
+++ b/app/src/main/res/layout/timetable_activity.xml
@@ -59,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="#ddd"
+        android:background="@color/colorAccent"
         app:menu="@menu/navigation_timetable" />
 
 </LinearLayout>
