--- a/app/src/main/res/layout/timetable_assistant_dialog.xml
+++ b/app/src/main/res/layout/timetable_assistant_dialog.xml
@@ -24,6 +24,7 @@
         android:layout_gravity="center"
         android:textStyle="bold"
         android:textSize="18sp"
+        android:textColor="@color/text_color"
         android:text="@string/timetable_assistant_step1"
         android:layout_alignParentTop="true"/>
 
@@ -46,6 +47,9 @@
                 android:layout_weight="10"
                 android:inputType="text"
                 android:hint="@string/sys_title"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"
+                android:textColorHint="@color/text_color"
                 android:nextFocusForward="@+id/txtTimeTableAssistantTimeTableYear"/>
         </TableRow>
 
@@ -56,8 +60,11 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="10"
+                android:textColorHint="@color/text_color"
                 android:inputType="text"
-                android:hint="@string/timetable_year"/>
+                android:hint="@string/timetable_year"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"/>
         </TableRow>
 
         <TableRow
@@ -68,7 +75,8 @@
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_margin="2dp"
-                android:divider="@color/Black"
+                android:divider="@color/text_color"
+                android:backgroundTint="@color/text_color"
                 android:dividerHeight="1dp"/>
         </TableRow>
 
@@ -80,19 +88,26 @@
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="time"/>
+                android:textColorHint="@color/text_color"
+                android:inputType="time"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"/>
             <EditText
                 android:id="@+id/txtTimeTableAssistantTimesEnd"
                 android:hint="@string/timetable_assistant_end"
                 android:layout_weight="3"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:inputType="time"/>
+                android:textColorHint="@color/text_color"
+                android:inputType="time"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"/>
             <CheckBox
                 android:id="@+id/chkTimeTableAssistantTimesBreak"
                 android:hint="@string/timetable_assistant_break"
                 android:layout_weight="3"
                 android:layout_height="wrap_content"
+                android:textColorHint="@color/text_color"
                 android:layout_width="0dp"/>
         </TableRow>
 
@@ -104,7 +119,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="10"
-                android:contentDescription="@string/learningCard_assistant_forward" />
+                android:contentDescription="@string/learningCard_assistant_forward"/>
         </TableRow>
 
         <TableRow
@@ -115,7 +130,8 @@
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_margin="2dp"
-                android:divider="@color/Black"
+                android:divider="@color/text_color"
+                android:backgroundTint="@color/text_color"
                 android:dividerHeight="1dp"/>
         </TableRow>
 
@@ -127,14 +143,18 @@
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/sys_title"
-                android:layout_weight="8"/>
+                android:layout_weight="8"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"/>
             <EditText
                 android:id="@+id/txtTimeTableAssistantSubjectsAlias"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text"
                 android:hint="@string/timetable_subject_alias"
-                android:layout_weight="2"/>
+                android:layout_weight="2"
+                android:textColor="@color/text_color"
+                android:backgroundTint="@color/text_color"/>
         </TableRow>
 
         <TableRow
@@ -196,19 +216,19 @@
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_arrow_back_black_24dp"
-                android:contentDescription="@string/learningCard_assistant_back" />
+                android:contentDescription="@string/learningCard_assistant_back"/>
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/cmdTimeTableAssistantForward"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="5"
                 app:srcCompat="@drawable/ic_arrow_forward_black_24dp"
-                android:contentDescription="@string/learningCard_assistant_forward" />
+                android:contentDescription="@string/learningCard_assistant_forward"/>
         </LinearLayout>
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/cmdTimeTableAssistantSave"
-            app:srcCompat="@android:drawable/ic_menu_save"
+            app:srcCompat="@drawable/save"
             android:layout_height="wrap_content"
             android:layout_width="match_parent"/>
     </LinearLayout>
