--- a/app/src/main/res/values-NIGHT/colors.xml
+++ b/app/src/main/res/values-NIGHT/colors.xml
@@ -9,10 +9,10 @@
   -->
 
 <resources>
-    <color name="colorPrimary">#3a68a4</color>
-    <color name="colorPrimaryDark">#ccc</color>
-    <color name="colorAccent">#fff</color>
+    <color name="colorPrimary">#000</color>
+    <color name="colorPrimaryDark">#444</color>
+    <color name="colorAccent">#444</color>
 
-    <color name="drawable_color">#FF000000</color>
-    <color name="text_color">#FF000000</color>
+    <color name="drawable_color">#FFFFFFFF</color>
+    <color name="text_color">#FFFFFFFF</color>
 </resources>
