--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
 
         <item name="android:dialogTheme">@style/MyDialogStyle</item>
         <item name="android:alertDialogTheme">@style/MyDialogStyle</item>
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
 
 
